m pus agenda, fie ea cat de scurta

--- a/meetings/2017-10/2017-10-05.md
+++ b/meetings/2017-10/2017-10-05.md
@@ -1,5 +1,5 @@
 # Agenda:
 * Antonio ne va vorbi despre mBot_Controller;
-
+* Trebuie desemnati responsabili de gestionarea paginilor in engleza/romana;
 
 #### Urmeaza sa completez cu mentiunile si informatiile suplimentare din timpul meeting-ului
