--- a/meetings/2017-10/2017-10-05.md
+++ b/meetings/2017-10/2017-10-05.md
@@ -3,3 +3,23 @@
 * Trebuie desemnati responsabili de gestionarea paginilor in engleza/romana;
 
 #### Urmeaza sa completez cu mentiunile si informatiile suplimentare din timpul meeting-ului
+
+Urmatoarul meeting fizic va avea loc pe 15 Octombrie.
+Avem regulamentul pe [github](github.com/GDRH/www.gdrh.ro/tree/master/assets/docx)
+Daca aveti propuneri referitor la regulament, sunt primite calduros
+Redimensionare poze -> @antonio
+Pana saptamana viitoare, fiecare o sa-si puna pe git pagina cu proiectul
+Ramanem cu doua linkuri de articol, si daca nu este disponibil un articol intr-o limba, sa apara doar in cealalta, si pe cealalta pagina sa apara "Not avaliable", si eventual sa ceara ajutor daca are nevoie
+o sa pun si asta aici: https://github.com/Makeblock-official/mBot/tree/master/mBot-default-program
+Antonio -> cod sursa
+Sarbu Dragos -> comentarii codul sursa
+Radu -> video si poze
+Catalin -> coordonator de proiect
+Matei -> pune la punct partea hardware
+George -> articolul de pe site 
+Miruna -> pregatim un buton, formatul mesajului pe care trebuie sa il trimita, si ea trebuie sa faca functia. Antonio o sa faca functia, iar Alex o sa pregateasca mesajul.
+Darius -> Functie goala in care daca se apasa un anumit buton, sa "beepaie"
+Alex -> mesajele
+Tudor -> reproduce proiectul
+Tudor + Dragos: joc in consola, text-based
+Antonio - NCURSES
