Am facut rezumatul sedintei

--- a/meetings/2017-10/2017-10-05.md
+++ b/meetings/2017-10/2017-10-05.md
@@ -1,7 +1,7 @@
 # Agenda:
 * Antonio ne va vorbi despre mBot_Controller;
 * Trebuie desemnati responsabili de gestionarea paginilor in engleza/romana;
-
+# Observatii din timpul meeting-ului:
 * Urmatoarul meeting fizic va avea loc pe 15 Octombrie.
 * Avem regulamentul pe [github](github.com/GDRH/www.gdrh.ro/tree/master/assets/docx)
 * Daca aveti propuneri referitor la regulament, sunt primite calduros
@@ -9,7 +9,7 @@
 * Pana saptamana viitoare, fiecare o sa-si puna pe git pagina cu proiectul
 * Ramanem cu doua linkuri de articol, si daca nu este disponibil un articol intr-o limba, sa apara doar in cealalta, si pe cealalta pagina sa apara "Not avaliable", si eventual sa ceara ajutor daca are nevoie
 o sa pun si asta aici: https://github.com/Makeblock-official/mBot/tree/master/mBot-default-program
-### Rolurile pentru urmatoarea intalnire fizica:
+# Rolurile pentru urmatoarea intalnire fizica:
 * o sa pun si asta aici: https://github.com/Makeblock-official/mBot/tree/master/mBot-default-program
 * Antonio -> cod sursa
 * Sarbu Dragos -> comentarii codul sursa
@@ -19,6 +19,6 @@ o sa pun si asta aici: https://github.com/Makeblock-official/mBot/tree/master/mB
 * Darius -> Functie goala in care daca se apasa un anumit buton, sa "beepaie"
 * Alex -> mesajele
 * Tudor -> reproduce proiectul
-### Alte observatii:
+# Alte observatii:
 * Tudor + Dragos: joc in consola, text-based
 * Antonio le-a sugerat sa arunce o privire peste [NCURSES]()
