Am adaugat rolul meu in urmatorul meeting offline

--- a/meetings/2017-10/2017-10-05.md
+++ b/meetings/2017-10/2017-10-05.md
@@ -19,6 +19,7 @@ o sa pun si asta aici: https://github.com/Makeblock-official/mBot/tree/master/mB
 * Darius -> Functie goala in care daca se apasa un anumit buton, sa "beepaie"
 * Alex -> mesajele
 * Tudor -> reproduce proiectul
+* George -> articol pe website
 # Alte observatii:
 * Tudor + Dragos: joc in consola, text-based
 * Antonio le-a sugerat sa arunce o privire peste [NCURSES]()
