Am reparat link-urile din meeting-ul 2017-10-12.md

--- a/meetings/2017-10/2017-10-12.md
+++ b/meetings/2017-10/2017-10-12.md
@@ -1,8 +1,8 @@
 # Agenda:
-* Trebuie sa vorbim ce vom face in urmatorul meeting online.
+* Trebuie sa vorbim ce vom face in urmatorul meeting offline.
 # Observatii din timpul meeting-ului:
-* Pana duminica trebuie sa citim [regulamentul] (https://github.com/GDRH/www.gdrh.ro/blob/master/assets/docx/Regulament_GDRH.docx) si sa ne spunem parerile.
-* Proiectul [mBot_Controller] (https://github.com/GDRH/mBot_Controller) a fost reprodus.
+* Pana duminica trebuie sa citim [regulamentul](https://github.com/GDRH/www.gdrh.ro/blob/master/assets/docx/Regulament_GDRH.docx) si sa ne spunem parerile.
+* Proiectul [mBot_Controller](https://github.com/GDRH/mBot_Controller) a fost reprodus.
 * Am discutat cum va fi realizat proiectul mBot_Controller si ce va face fiecare persoana la urmatoarea intalnire offline.
 * Am discutat despre statusul curent al proiectelor.
 # Alte observatii:
